# AItestHP

./: .gitignore  README.md
aiart-backend/: .env.example  README.md  pyproject.toml
aiart-backend/app/: auth.py  config.py  game.py  main.py  media.py  models.py  storage.py
aiart-backend/tests/: test_game.py
aiart-frontend/: .env.production  index.html  package-lock.json  package.json
aiart-frontend/src/: App.tsx
aiart-frontend/src/lib/: api.ts
aiart-frontend/src/pages/: AdminDashboard.tsx  AdminLogin.tsx  Detail.tsx  Gallery.tsx  Submit.tsx
